# feldspar_rust

./: .gitignore  .lvimrc  Cargo.toml  README.md  TODO  cli.yml
src/: alphabeta.rs  bitboard.rs  board.rs  core.rs  eval.rs  feldspar.rs  fill.rs  game.rs  main.rs  minimax.rs  move_list.rs  movegen.rs  moves.rs  perft.rs  pins.rs  play.rs  print.rs  search.rs  tables.rs  tree.rs  uci.rs  zobrist.rs
