[package]
name = "feldspar2"
version = "0.2.0"
authors = ["zmeadows <zmeadows@gmail.com>"]

[dependencies]
colored = "1.6"
log = "0.4.1"
pretty_env_logger = "0.2.3"
bitflags = "1.0.3"
prettytable-rs = "^0.6"
num_cpus = "1.0"
rand = "*"
flame = "0.2.2"
flamer = "^0.2.3"
chrono = "0.4"

[profile.release]
debug = true
